--- a/config/crd/bases/onecloud.yunion.io_ansibleplaybooks.yaml
+++ b/config/crd/bases/onecloud.yunion.io_ansibleplaybooks.yaml
@@ -36,24 +36,39 @@ spec:
         spec:
           description: AnsiblePlaybookSpec defines the desired state of AnsiblePlaybook
           properties:
-            dependentPlaybook:
-              description: DependentPlaybook describe the dependent playbooks after
-                which itself can run.
-              items:
-                description: LocalObjectReference contains enough information to let
-                  you locate the referenced object inside the same namespace.
-                properties:
-                  name:
-                    type: string
-                type: object
-              type: array
             inventory:
               description: VirtualMachines specifies the inventory of ansible playbook.
               items:
                 properties:
                   vars:
                     additionalProperties:
-                      type: string
+                      properties:
+                        direct:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          x-kubernetes-int-or-string: true
+                        indirect:
+                          properties:
+                            fieldPath:
+                              type: string
+                            group:
+                              type: string
+                            kind:
+                              type: string
+                            name:
+                              type: string
+                            namespace:
+                              type: string
+                            version:
+                              type: string
+                          required:
+                          - fieldPath
+                          - kind
+                          - name
+                          - namespace
+                          type: object
+                      type: object
                     description: Vars describes the unique values ​​of the VirtualMachine
                       corresponding to the variables in the AnsiblePlaybookTemplate.
                     type: object
@@ -81,6 +96,7 @@ spec:
                 type: object
               type: array
             maxRetryTimes:
+              description: Nil or Non-positive number means unlimited.
               format: int32
               type: integer
             playbookTemplate:
@@ -103,9 +119,12 @@ spec:
                   items:
                     properties:
                       default:
+                        anyOf:
+                        - type: integer
+                        - type: string
                         description: Default describe the default value of this variable.
                           If it is empty, Required should be true.
-                        type: string
+                        x-kubernetes-int-or-string: true
                       name:
                         type: string
                       required:
@@ -126,7 +145,33 @@ spec:
               type: object
             vars:
               additionalProperties:
-                type: string
+                properties:
+                  direct:
+                    anyOf:
+                    - type: integer
+                    - type: string
+                    x-kubernetes-int-or-string: true
+                  indirect:
+                    properties:
+                      fieldPath:
+                        type: string
+                      group:
+                        type: string
+                      kind:
+                        type: string
+                      name:
+                        type: string
+                      namespace:
+                        type: string
+                      version:
+                        type: string
+                    required:
+                    - fieldPath
+                    - kind
+                    - name
+                    - namespace
+                    type: object
+                type: object
               description: Vars describe the public value about Vars in AnsiblePlaybookTemplate.
               type: object
           required:
