--- a/config/samples/onecloud_v1_ansibleplaybooktemplate.yaml
+++ b/config/samples/onecloud_v1_ansibleplaybooktemplate.yaml
@@ -15,8 +15,9 @@ spec:
     - src: https://github.com/rainzm/ansible-role-jenkins
   vars:
     - name: jenkins_hostname
-      required: true
-      default: VirtualMachine.IP
+      default: localhost
+    - name: jenkins_http_port
+      default: 8080
     - name: jenkins_admin_username
       default: admin
     - name: jenkins_admin_password
