--- a/config/crd/bases/onecloud.yunion.io_ansibleplaybooktemplates.yaml
+++ b/config/crd/bases/onecloud.yunion.io_ansibleplaybooktemplates.yaml
@@ -57,6 +57,7 @@ spec:
                     - type: string
                     description: Default describe the default value of this variable.
                       If it is empty, Required should be true.
+                    type: object
                     x-kubernetes-int-or-string: true
                   name:
                     type: string
