support yaml string

--- a/config/crd/bases/onecloud.yunion.io_ansibleplaybooks.yaml
+++ b/config/crd/bases/onecloud.yunion.io_ansibleplaybooks.yaml
@@ -43,6 +43,10 @@ spec:
                   vars:
                     additionalProperties:
                       properties:
+                        isYaml:
+                          description: IsYaml determines whether the string in IntOrStringStore
+                            is a yaml string
+                          type: boolean
                         reference:
                           properties:
                             fieldPath:
@@ -148,6 +152,10 @@ spec:
             vars:
               additionalProperties:
                 properties:
+                  isYaml:
+                    description: IsYaml determines whether the string in IntOrStringStore
+                      is a yaml string
+                    type: boolean
                   reference:
                     properties:
                       fieldPath:
