refactor: Abstract the same logic and abstract interface

--- a/config/crd/bases/onecloud.yunion.io_ansibleplaybooks.yaml
+++ b/config/crd/bases/onecloud.yunion.io_ansibleplaybooks.yaml
@@ -204,14 +204,15 @@ spec:
                   type: string
               type: object
             phase:
-              description: 'Important: Run "make" to regenerate code after modifying
-                this file'
+              description: ResourcePhase is a label for the condition of a resource
+                at the current time
               type: string
             reason:
-              description: A human readable message indicating details about why vm
+              description: A human readable message indicating details about why resource
                 is in this phase.
               type: string
             tryTimes:
+              description: TryTimes record the continuous try times.
               format: int32
               type: integer
           required:
